# bonus-certificate-bates-hedging

./: .gitignore  README.md  main.py  pyproject.toml
data/: data.csv
data/marketDataClose25-04/: 010126.csv  032026.csv  050925.csv  051625.csv  052325.csv  053025.csv  061826.csv  062025.csv  071825.csv  081525.csv  091925.csv  112125.csv
notebooks/: bc_pricing.ipynb  market_data_analysis.ipynb  volatility_surface_analysis.ipynb
src/: main.py
src/bank_positions/: exotic_options.py
src/bates_formula/: bates_model.py  calibration.py  calibration_all_maturities.py  calibration_global.py  characteristic_function.py  explain_bates.py
src/data_processing/: market_data_processor.py
src/dividends/: estimate_dividends.py
src/interest_rates/: calculate_interest_rates.py
src/payout/: payout.py
